# ForHubProject

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  db.py  main.py  utils.py
app/services/: bootstrap.py  digest.py  gmail_sync.py  job_sources.py  local_llm.py  sample_data.py  source_scanner.py  tracker.py
app/static/: style.css
app/storage/: __init__.py  base.py  drive.py  local.py  service.py
app/templates/: index.html
config/: source_registry.json
docs/: architecture.md  job-operations-design-ja.md  public-release-checklist.md
ops/launchd/: README.md
ops/launchd/templates/: com.forme.jobhub.digest-evening.plist.in  com.forme.jobhub.digest-morning.plist.in  com.forme.jobhub.mail-sync.plist.in  com.forme.jobhub.source-scan.plist.in  com.forme.ollama.autostart.plist.in
scripts/: build-digest.sh  common.sh  first-gmail-sync.sh  gcp-bootstrap.sh  install-mlx-qwen.sh  open-dashboard.sh  preflight-github-check.sh  render-launchd-plists.sh  scan-sources.sh  start-dashboard.sh  summarize-note-local.sh  sync-mail.sh
